fixed overflow on job#show

--- a/app/assets/stylesheets/Bootstrap/user.scss
+++ b/app/assets/stylesheets/Bootstrap/user.scss
@@ -771,7 +771,8 @@ html {
   }
   .job_show_header {
     max-height: 25vw;
-    overflow: hidden;
+    // overflow: hidden;
+    overflow: visible !important;
   }
 
   .job_show_header h1 {
